reworked portfolio page to use cards, and be responsive. reworked nav bar to be just a link to portfolio. removed main.js; no need to render nav dropdown

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Bootstrap Portfolio</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,15 +34,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Projects
-                        </a>
-                        <div class="dropdown-menu" id="dropdown" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./portfolio.html">All Projects</a>
-                            <div class="dropdown-divider"></div>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                 </ul>
                 <div class="dropdown-divider"></div>
@@ -66,7 +59,9 @@
                                 <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
                             </div>
                             <div class="mb-4 col-6 col-md-12">
-                                <p class="about-p">Currently located in Dallas, Georgia. Download my resume <a href="https://www.dropbox.com/s/f7greyngg7pd823/graysonGantek%20resume.pdf?dl=0">here</a>.</p>
+                                <p class="about-p">Currently located in Dallas, Georgia. Download my resume <a
+                                        href="https://www.dropbox.com/s/f7greyngg7pd823/graysonGantek%20resume.pdf?dl=0">here</a>.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -112,7 +107,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="./javascript/projects.js"></script>
-    <script src="./javascript/main.js"></script>
 </body>
 
 </html>
