--- a/contact.html
+++ b/contact.html
@@ -37,15 +37,8 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Projects
-                        </a>
-                        <div class="dropdown-menu" id="dropdown" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./portfolio.html">All Projects</a>
-                            <div class="dropdown-divider"></div>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                 </ul>
                 <div class="dropdown-divider"></div>
@@ -122,7 +115,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="./javascript/projects.js"></script>
-    <script src="./javascript/main.js"></script>
 </body>
 
 </html>
