--- a/contact.html
+++ b/contact.html
@@ -61,31 +61,27 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-8 mb-5">
-                        <form>
+                        <form action="https://formspree.io/hello@graysongantek.com" method="POST">
                             <div class="form-group">
                                 <label for="contact-name">Name</label>
-                                <input type="text" class="form-control" id="contact-name" placeholder="Your Name">
+                                <input id="contact-name" class="form-control" type="text" name="name"
+                                    placeholder="Your Name" required>
                             </div>
                             <div class="form-group">
                                 <label for="contact-email">Email address</label>
-                                <input type="email" class="form-control" id="contact-email"
-                                    placeholder="name@example.com">
-                                <!-- <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else
-                                    without permission.</small> -->
+                                <input id="contact-email" class="form-control" type="email" name="email"
+                                    placeholder="name@example.com" required>
                             </div>
                             <div class="form-group">
                                 <label for="contact-text-area">Message</label>
-                                <textarea class="form-control" id="contact-text-area" rows="6"
-                                    placeholder="Your message here"></textarea>
+                                <textarea id="contact-text-area" class="form-control" type="text" name="message" rows="6"
+                                    placeholder="Your message here" required></textarea>
                             </div>
-                            <button type="button" class="btn btn-primary" id="contact-button">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="contact-button">Submit</button>
                         </form>
                     </div>
                     <div class="col-12 col-md-4 text-muted text-right" id="contact-aside">
-                        <p>Email me at <a href="mailto:hello@graysongantek.com">hello@graysongantek.com</a> or
-                            call me directly at (770) 312-9238.</p>
-                        <hr>
-                        <p>Feel free to contact me at any time. I usually respond within a day or two.</p>
+                        <p>Please feel free to email me directly at <a href="mailto:hello@graysongantek.com">hello@graysongantek.com</a>, or fill out the form. I usually respond within a day or two.</p>
                         <hr>
                         <p>Find me on these sites:</p>
                         <a href="https://github.com/graysonlee123" target="_blank" class="social-icon"><i
